src/main/java/com/example/team_work_management/exception/error/InvalidJwtTokenException.java
package com.example.team_work_management.exception.error;

public class InvalidJwtTokenException extends RuntimeException{
    public InvalidJwtTokenException(String message){
        super(message);
    }
}
